# UTTT

./: .gitignore  CHECKPOINT_RESUME_GUIDE.md  LICENSE  README.md  config.yaml  delete_agents_mcts.txt  example_mcts_usage.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  test_adaptive_temperature.py  test_checkpoints.py  test_dead_relu.py  test_play_vs_agent.py  test_tensorboard.py
docs/: ARCHITECTURE.md  EXAMPLES.md  TOURNAMENT_GUIDE.md  TRAINING_GUIDE.md
runs/: series_HeuristicAgent_vs_RandomAgent_2025-09-07_11-09-02.json  series_HeuristicAgent_vs_RandomAgent_2025-09-07_11-43-14.json
tensorboard_logs/run_20251016_075135/: events.out.tfevents.1760619095.LAPTOP-I1C2TATS.25464.0
tournaments/: elo_ratings.json  series_AZ-Epoch2_vs_RandomAgent_2025-10-15_16-41-18.json
ttt/: alphazero_final.pt  ttt_config.yaml
ttt/agents/: __init__.py  base.py  human.py  random.py
ttt/env/: state.py
ttt/eval/: alphazero_factory.py  compute_ratings.py  elo.py  tournaments.py
ttt/mcts/: alphazero_strategy.py  base.py  transpo.py
ttt/scripts/: alphazero_tournament.py  launch_tensorboard.py  play_vs_agent.py  view_tournament.py  view_training_data.py
ttt/tournaments/: series_AZ-Epoch2_vs_RandomAgent_2025-10-25_15-27-24.json
uttt/: uttt_config.yaml
uttt/agents/: __init__.py  base.py  heuristic.py  human.py  random.py
uttt/env/: state.py
uttt/eval/: alphazero_factory.py  compute_ratings.py  elo.py  openings.py  tournaments.py
uttt/mcts/: alphazero_strategy.py  base.py  heuristic_strategy.py  transpo.py
uttt/scripts/: alphazero_tournament.py  play_cli.py  (+6 more)
(+49 files in other folders)
