[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uttt"
version = "0.0.1"
description = "Ultimate Tic-Tac-Toe environment and self-play framework"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.11"

# Core deps for Tier-0 dev
dependencies = [
  "numpy>=1.26",
  "gymnasium>=0.29",
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "isort>=5.13",
  "pre-commit>=3.6"
]

[tool.setuptools]
# ← This line is the key: only package the 'uttt' module
packages = ["uttt"]

[tool.pytest.ini_options]
testpaths = ["uttt/tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
